<resources>
    <string name="app_name">Miserend</string>

    <string name="masses_text">Ma: %1$s</string>

    <string name="today">Ma</string>
    <string name="tomorrow">Holnap</string>

    <string name="churches">Templomok</string>
    <string name="map">Térkép</string>
    <string name="masses">Misék</string>

    <string name="search_hint">Település, név...</string>

    <string name="church_location">Megközelítés</string>
    <string name="church_gallery">Képek</string>
    <string name="report_error">Hibajelentés</string>
    <string name="add_to_favorites">Kedvencekhez</string>
    <string name="remove_from_favorites">Eltávolítás</string>

    <string name="advanced_search">Részletes kereső</string>

    <string name="static_map_url">https://maps.googleapis.com/maps/api/staticmap?center=%1$f,%2$f&amp;zoom=16&amp;size=%3$dx%4$d&amp;scale=2&amp;key=AIzaSyD7gu93yYTqPpJ2G5K79AhBs1UoyGNIs_o</string>

    <string name="action_navigate">Útvonal</string>
    <string name="no_mass_for_church">A templomhoz nem tartozik mise</string>

    <string name="no_masses_near">Nem találhatók misék a közelben</string>

    <string name="dialog_db_missing_title">Adatabázis nem taláható</string>
    <string name="dialog_db_missing_message">Az alkalmazás használatához szükség van az adatbázis letöltésére. Letölti most?</string>
    <string name="dialog_db_corrupt_title">Sérült adatbázis</string>
    <string name="dialog_db_corrupt_message">Az alkalmazás használatához szükség van az adatbázis letöltésére. Letölti most?</string>
    <string name="dialog_db_missing_btn_ok">Letöltés</string>
    <string name="dialog_db_missing_btn_cancel">Kilépés</string>
    <string name="dialog_db_downloading">Adatbázis letöltése</string>

    <string name="dialog_db_update_title">Frissítés elérhető</string>
    <string name="dialog_db_update_message">Elérhető frisebb adatbázis. Letölti most?</string>
    <string name="dialog_db_update_btn_ok">Igen</string>
    <string name="dialog_db_update_btn_cancel">Nem</string>

    <string name="location_not_available">Pozíció nem elérhető. Ellenőrizze, hogy be van-e kapcsolva a helymeghatározás!</string>
    <string name="location_settings_button">Beállítások</string>
    <string name="location_permission_needed_for_near_churches">A közeli templomok megjelenítéséhez az alkalmazásnak hozzáférésre van szüksége készüléke pozíciójához</string>
    <string name="location_permission_needed_for_near_masses">A közeli misék megjelenítéséhez az alkalmazásnak hozzáférésre van szüksége készüléke pozíciójához</string>
    <string name="location_enable">Engedélyezés</string>

    <string name="no_favorites">Még nincs kedvencekhez adott templom</string>

    <string name="placeholder">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="report_wrong_location">Rossz pozíció</string>
    <string name="report_wrong_masses">Rossz miseidőpont</string>
    <string name="report_other">Egyéb</string>
    <string name="report_text_hint">Hiba leírása</string>
    <string name="report_mail_hint">Email cím (opcionális)</string>
    <string name="menu_report">Hibajelentés</string>
    <string name="ok">ok</string>
    <string name="cancel">mégse</string>

    <string name="mass_details_title">Mise részletei</string>

    <!-- Tags -->
    <string name="tag_g">Gitáros</string>
    <string name="tag_cs">Csendes</string>
    <string name="tag_csal">Családos / gyerek</string>
    <string name="tag_d">Diák</string>
    <string name="tag_ifi">Egyetemista / ifjúsági</string>
    <string name="tag_ige">Igeliturgia</string>
    <string name="tag_szent">Szentségimádás</string>
    <string name="tag_utr">Utrenye</string>
    <string name="tag_vecs">Vecsernye</string>
    <string name="tag_gor">Görögkatolikus</string>
    <string name="tag_rom">Római katolikus</string>
    <string name="tag_regi">Régi rítusú</string>

    <string name="navigation_url">"https://maps.google.com/maps?f=d&amp;daddr=%1$f,%2$f</string>

</resources>
