<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/report_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <RadioButton
            android:id="@+id/radio_wrong_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/report_wrong_location" />

        <RadioButton
            android:id="@+id/radio_wrong_masses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_wrong_masses" />

        <RadioButton
            android:id="@+id/radio_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_other" />
    </RadioGroup>

    <EditText
        android:id="@+id/report_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/report_text_hint" />

    <EditText
        android:id="@+id/report_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/report_mail_hint" />

</LinearLayout>