<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/no_masses_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/list_gb"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="48dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sentiment_very_dissatisfied" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/no_masses_near"
            android:textColor="@color/black_40"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/list_gb"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="48dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location_off" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/location_not_available"
            android:textColor="@color/black_40"
            android:textSize="14sp" />

        <Button
            android:id="@+id/location_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_settings_button"
            android:theme="@style/PrimaryFlatButton" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_permission_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/list_gb"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="48dp"
        android:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location_off" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/location_permission_needed_for_near_masses"
            android:textColor="@color/black_40"
            android:textSize="14sp" />

        <Button
            android:id="@+id/location_permission_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_enable"
            android:theme="@style/PrimaryFlatButton" />
    </LinearLayout>
</LinearLayout>