<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/list_gb"
        android:orientation="vertical"
        android:visibility="gone"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/location_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/list_gb"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="48dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/location_not_available"
            android:textSize="18sp" />

        <Button
            android:id="@+id/location_settings_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_settings_button"
            android:textColor="@color/white"
            android:theme="@style/PrimaryButton" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_permission_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/list_gb"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="48dp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/location_permission_needed"
            android:textSize="18sp" />

        <Button
            android:id="@+id/location_permission_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_enable"
            android:textColor="@color/white"
            android:theme="@style/PrimaryButton" />
    </LinearLayout>
</LinearLayout>