<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/transparent"
            app:layout_scrollFlags="scroll">

            <android.support.v4.view.ViewPager
                android:id="@+id/images_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5" />

            <com.rd.PageIndicatorView
                android:id="@+id/images_pager_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="8dp"
                app:piv_animationType="worm"
                app:piv_interactiveAnimation="true"
                app:piv_selectedColor="@color/white"
                app:piv_unselectedColor="@color/white_60" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/church_details_actionbar_background"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <View
                android:id="@+id/gallery_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/list_gb"
            android:orientation="vertical">

            <TextView
                android:id="@+id/church_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="24dp"
                android:textColor="@color/black_80"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/church_common_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="24dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/black_40"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black_20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:id="@+id/btn_favorite"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/favorite_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_favorite_border_big" />

                    <TextView
                        android:id="@+id/favorite_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_favorites"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_report"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_report_big" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_error"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/masses_today_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:text="Ma"
                        android:textColor="@color/black_80"
                        android:textSize="20sp" />

                    <com.google.android.flexbox.FlexboxLayout
                        android:id="@+id/masses_today_flexbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        app:alignContent="flex_start"
                        app:alignItems="flex_start"
                        app:flexWrap="wrap" />

                    <TextView
                        android:id="@+id/masses_this_sunday_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="Most vasárnap"
                        android:textColor="@color/black_80"
                        android:textSize="20sp" />

                    <com.google.android.flexbox.FlexboxLayout
                        android:id="@+id/masses_this_sunday_flexbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        app:alignContent="flex_start"
                        app:alignItems="flex_start"
                        app:flexWrap="wrap" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/no_masses_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/no_mass_for_church"
                android:textSize="18sp"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/masses_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="24dp"
                        android:text="@string/church_location"
                        android:textColor="@color/black_80"
                        android:textSize="24sp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp">

                        <com.facebook.drawee.view.SimpleDraweeView
                            android:id="@+id/static_map"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/map_pin" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/map_pin"
                                android:visibility="invisible" />
                        </LinearLayout>
                    </FrameLayout>


                    <TextView
                        android:id="@+id/church_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/church_getting_there"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/dividerHorizontal" />

                    <Button
                        android:id="@+id/btn_navigate"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_navigate"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>